--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,7 +4,7 @@
   justify-content: space-evenly;
   align-items: center;
   padding-bottom: 2rem;
-  background-image: url("../../assets/1.jpeg");
+  background-image: url("../../assets/background.jpeg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
